myteo/test/parser/ast/pattern/malformed_error.exp
Error: Unexpected token `1`, expected start of pattern
test/parser/ast/pattern/malformed_error.myte:4:6
 4 |   val 1 = 1;
   |       ^