myteo/test/parser/ast/pattern/malformed_error.myte
module Test

fun main() {
  val 1 = 1;
}